# dexdroid

./: README.md  build-apk.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup-signing.sh
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
